--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     },
     "dependencies": {
         "ayyo": "git+https://github.com/FallingSnow/ayyo.git",
-        "esm": "3.0.84",
+        "esm": "^3.2.22",
         "simple-rpc": "git+https://github.com/FallingSnow/simple-rpc.git"
     },
     "devDependencies": {
-        "eslint": "^5.12.0",
+        "eslint": "^5.16.0",
         "husky": "^1.3.1",
         "xo": "^0.24.0"
     },
